# fadec

./: .build.yml  .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  decode-test.c  decode-test.inc  decode.c  decode.h  encode-test.c  encode-test.inc  encode.c  encode2-test.c  encode2-test.cc  encode2.c  fadec-enc.h  fadec-enc2.h  fadec.h  format.c  instrs.txt  meson.build  meson_options.txt  parseinstrs.py
.github/workflows/: ci.yml
tests/: benchmarks.txt  common.sh  decode-enter.sh  decode-imul.sh  decode-inc.sh  decode-jmp.txt  decode-movsx.sh  decode-ret.sh  decode-sse-movq.sh  decode-sse-shufpd.sh  driver.c  meson.build  modrm.txt  prefixes.txt  test.py  test_decode.c  test_encode.c
